--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,21 @@ dependencies:
   flutter:
     sdk: flutter
   adaptive_navbar: ^0.0.3
+  intl: ^0.17.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  # build_runner: ^2.3.2
+  # hive_generator: ^2.0.0
+  http: ^0.13.5
+  maplibre_gl:
+    git:
+      url: https://github.com/m0nac0/flutter-maplibre-gl.git
+      ref: main
+  html_editor_enhanced: ^2.5.0
+  flutter_quill: ^2.0.13
+  i18n_extension: ^4.1.3
+  path_provider: ^2.0.11
+  dropdown_search2: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/logo.jpg
+      - assets/styles.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
